Fix button overflow in user card

--- a/src/components/styles/UserCard.css
+++ b/src/components/styles/UserCard.css
@@ -1,6 +1,6 @@
 .userCard {
   padding: 15px;
-  width: 300px;
+  /* width: 300px; */
   justify-content: space-between;
   margin: 10px auto;
   max-width: 350px;
@@ -9,6 +9,7 @@
   gap: 20px;
   /* text-align: center; */
   background: linear-gradient(#73e664, #6d73b4);
+  
 }
 
 .userCard__title {
@@ -20,14 +21,19 @@
 
 .userCard__list {
   line-height: 30px;
+  
+}
+
+.userCard__list li{
+  box-sizing: content-box;
 }
 
 .userCard__flex-btn {
-  display: flex;
+  /* display: flex; */
   gap: 25px;
   justify-content: center;
   margin: 15px 0 5px 0;
-  box-sizing: content-box;
+  /* box-sizing: content-box; */
 }
 
 .userCard__btn {
@@ -39,6 +45,17 @@
   cursor: pointer;
   transition: background 300ms ease;
   font-weight: bold;
+  margin: 2px;
+  align-items: left;
+  /* box-sizing: content-box; */
+}
+
+.buttons-container{
+  display: flex;
+  text-align: right;
+  justify-content: right;
+  width: 100%;
+  /* height: 100px; */
 }
 
 .userCard__btn:hover {
@@ -74,5 +91,6 @@
     flex-direction: column;
     justify-content: center;
     margin: 0;
+    /* box-sizing: content-box; */
   }
 }
